2005-09-93	Florian Boor <florian.boor@kernelconcepts.de>

	* theme.c: Move signal connction to avoid hang on xsettings start.
	
2005-08-25	Florian Boor <florian.boor@kernelconcepts.de>

	* gpe-conf-sysinfo.desktop.in: Move sysinfo to utitlities desk.

2005-08-23	Florian Boor <florian.boor@kernelconcepts.de>

	* Release Version 0.1.25
	* Makefile: Version to 0.1.25
	* theme.c: Implemented full terminal font settings and preview.

2005-07-01	Florian Boor <florian.boor@kernelconcepts.de>

	* screen/brightness.c: Add improved support for sysfs. 
	                       Contributed by Arjan Schrijver.

2005-06-17	Florian Boor <florian.boor@kernelconcepts.de>

	* screen/brightness.c: Add support for iPAQ H1940. 
	                       Contributed by Arjan Schrijver.

2005-06-07	Florian Boor <florian.boor@kernelconcepts.de>

	* network.c: Make notebook scrollable.

2005-06-06	Florian Boor <florian.boor@kernelconcepts.de>

	* battery.c: Fixed path, some minor improvements in battery display. 
	
2005-06-05	Florian Boor <florian.boor@kernelconcepts.de>

	* battery.c: Got rid of this "retro" battery info code. 
	* battery.h: Add some definitions from h3600_ts.h.

2005-25-29      Ole Reinhardt <ole.reinhardt@kernelconcepts.de
    * cfgfile.c, network.c: Fixed problem with config file reading /
                            writing (especially with new devices)
		  
2005-05-19	Florian Boor <florian.boor@kernelconcepts.de>

	* battery.c: Fix typo.
	* keys/keyctl.c: Fix GUI layout.

2005-05-18	Florian Boor <florian.boor@kernelconcepts.de>

	* battery.c: Start to implement reading iPaq battery information from
	             iPaq HAL.

2005-05-17	Florian Boor <florian.boor@kernelconcepts.de>

	* Release Version 0.1.24
	* Makefile: Version to 0.1.24
	* sleep/interface.c, sleep/callbacks.c: Remove some old cruft, fix name 
	                                        of configuration file.

2005-05-12	Florian Boor <florian.boor@kernelconcepts.de>
