@@ -1,0 +1,8 @@
+#ifndef _USB_H
+#define _USB_H
+
+GtkWidget *USB_Build_Objects();
+void USB_Save();
+void USB_Restore();
+
+#endif
